@@ -1,23 +1,6 @@
-use strict;
-use warnings;
-use File::Spec::Functions qw( catdir updir );
-use FindBin               qw( $Bin );
-use lib               catdir( $Bin, updir, 'lib' ), catdir( $Bin, 'lib' );
+use t::boilerplate;
 
 use Test::More;
-use Test::Requires { version => 0.88 };
-use Module::Build;
-
-my $notes = {}; my $perl_ver;
-
-BEGIN {
-   my $builder = eval { Module::Build->current };
-      $builder and $notes = $builder->notes;
-      $perl_ver = $notes->{min_perl_version} || 5.008;
-      $Bin =~ m{ : .+ : }mx and plan skip_all => 'Two colons in $Bin path';
-}
-
-use Test::Requires "${perl_ver}";
 use English                    qw( -no_match_vars );
 use File::DataClass::Functions qw( :all );
 use Unexpected::Functions      qw( is_class_loaded );
