@@ -1,23 +1,8 @@
-use strict;
-use warnings;
-use File::Spec::Functions qw( catdir updir );
-use FindBin               qw( $Bin );
-use lib               catdir( $Bin, updir, 'lib' );
+use t::boilerplate;
 
 use Test::More;
-use Test::Requires { version => 0.88 };
-use Module::Build;
-
-my $notes = {}; my $perl_ver;
-
-BEGIN {
-   my $builder = eval { Module::Build->current };
-      $builder and $notes = $builder->notes;
-      $perl_ver = $notes->{min_perl_version} || 5.008;
-}
-
-use Test::Requires "${perl_ver}";
 use English qw( -no_match_vars );
+use File::DataClass::IO;
 
 use_ok 'File::DataClass::Schema';
 
@@ -32,16 +17,20 @@ sub test {
 }
 
 
-my $schema = File::DataClass::Schema->new
+my $path_ref  = [ 't', 'default.json' ];
+my $schema    = File::DataClass::Schema->new
    ( cache_class              => 'none',
      lock_class               => 'none',
-     path                     => [ qw( t default.json ) ],
+     path                     => $path_ref,
      result_source_attributes => {
         keys                  => {
            attributes         => [ qw( vals ) ],
            defaults           => { vals => {} }, }, },
      storage_class            => 'JSON',
      tempdir                  => 't', );
+
+io( $path_ref )->is_writable
+   or plan skip_all => 'File t/default.json not writable';
 
 my $rs   = test( $schema, 'resultset', 'keys' );
 my $args = { name => 'dummy', vals => { k1 => 'v1' } };
