@@ -1,23 +1,8 @@
-use strict;
-use warnings;
-use File::Spec::Functions qw( catdir catfile updir );
-use FindBin               qw( $Bin );
-use lib               catdir( $Bin, updir, 'lib' );
+use t::boilerplate;
 
 use Test::More;
-use Test::Requires { version => 0.88 };
-use Module::Build;
-
-my $notes = {}; my $perl_ver;
-
-BEGIN {
-   my $builder = eval { Module::Build->current };
-      $builder and $notes = $builder->notes;
-      $perl_ver = $notes->{min_perl_version} || 5.008;
-}
-
-use Test::Requires "${perl_ver}";
-use English qw( -no_match_vars );
+use English               qw( -no_match_vars );
+use File::Spec::Functions qw( catfile );
 use Text::Diff;
 
 sub test {
@@ -30,16 +15,21 @@ sub test {
    $EVAL_ERROR and return $EVAL_ERROR; return $wantarray ? @{ $res } : $res;
 }
 
-use_ok 'File::DataClass::IO';
+use File::DataClass::IO;
+
 use_ok 'File::DataClass::Schema';
 
-my $path   = catfile( qw( t default.json ) );
+my $path_ref = [ 't', 'default.json' ]; my $path = catfile( @{ $path_ref } );
+
+io( $path_ref )->is_writable
+   or plan skip_all => 'File t/default.json not writable';
+
 my $schema = File::DataClass::Schema->new
-   (  path          => $path,
+   (  path                     => $path,
       result_source_attributes => {
-         globals    => { attributes => [ qw( text ) ], }, },
-      storage_class => 'Any',
-      tempdir       => 't' );
+         globals               => { attributes => [ 'text' ], }, },
+      storage_class            => 'Any',
+      tempdir                  => 't' );
 
 isa_ok $schema, 'File::DataClass::Schema';
 is $schema->storage->extn, undef, 'Undefined extension';
